# gridlock

./: .gitignore  PLAN.md  README.md  vercel.json
.github/workflows/: release-worker.yml
cloudflare/: cloudflare.env  cloudflare.env.example  setup-tunnel.sh  up.sh
gridlock/: Anchor.toml  Cargo.toml  docker-compose.yml  lock-mint.json  package-lock.json  package.json
gridlock-backend/: .env.example  Dockerfile  config.py  main.py  models.py  package.json  requirements.txt  state.py
gridlock-backend/migrations/: 002_api_keys.sql  002_jobs_extras.sql  003_billing.sql  004_customer_balances.sql  005_billing_invoices.sql  006_billing_deposits.sql  007_stake.sql
gridlock-backend/preset/: setup.md
gridlock-backend/routes/: chat.py  jobs.py  live.py  network.py  workers.py
gridlock-backend/src/: attestation.ts  cache.ts  config.ts  db.ts  hono-context.ts  index.ts  settlement.ts  solana-settlement.ts  solana.ts  state.ts  tee-capacity.ts  types.ts  watcher.ts  worker-stats.ts  workers.ts
gridlock-backend/test/: api.test.ts
gridlock-native-worker/: README.md  package.json  tsconfig.json
gridlock-native-worker/src/: attestation.ts  banner.ts  config.ts  gpu.ts  index.ts  inference.ts  ollama.ts  (+1 more)
gridlock-web/: next.config.ts  package.json
gridlock-worker/: .gitignore  RELEASE.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
gridlock/programs/job-scheduler/: Cargo.toml
gridlock/programs/job-scheduler/src/: lib.rs
gridlock/programs/sla-registry/: Cargo.toml
gridlock/programs/sla-registry/src/: lib.rs
(+125 files in other folders)
